--- a/package.json
+++ b/package.json
@@ -1,10 +1,25 @@
 {
 	"name": "amf",
 	"version": "0.0.2",
+	"type": "module",
 	"private": true,
 	"dependencies": {
-		"lodash": "^4.17.4",
-		"text-encoding": "^0.6.4",
+		"lodash-es": "^4.17.21",
 		"number-encoding": "perceptron8/number-encoding"
+	},
+	"devDependencies": {
+		"@types/chai": "^5.0.1",
+		"@types/lodash-es": "^4.17.12",
+		"@types/node": "^22.10.2",
+		"chai": "^5.1.2",
+		"tsx": "^4.19.2"
+	},
+	"engines": {
+		"node": ">=22.0.0"
+	},
+	"packageManager": "yarn@1.22.22",
+	"scripts": {
+		"postinstall": "npx tsc",
+		"test": "node --test --import tsx './test/**/*.spec.ts'"
 	}
 }
